--- a/Index.html
+++ b/Index.html
@@ -106,7 +106,131 @@
             </div>
         </div>
         <img src="./Assets/arrow.png" alt="Arrow icon" class="icon_arrow"
-        onclick="location.href='./#Experience'">
+        onclick="location.href='./#Experience'"/>
+    </section>
+    <section id="Experience">
+        <p class="section_text_p1">Explore My</p>
+        <h1 class="title">Experience</h1>
+        <div class="experience-details-container">
+            <div class="about-containers">
+                <div class="details-containers">
+                    <h2 class="Experience-sub-title">Front End Development</h2>
+                    <div class="article-container">
+                        <article>
+                            <img src="./Assets/checkmark.png" 
+                            alt="Experience"
+                            class="icon"
+                            >
+                            <div>
+                                <h3>HTML</h3>
+                                <p>Intermediate</p>
+                            </div>
+                        </article>
+                        <article>
+                            <img src="./Assets/checkmark.png" 
+                            alt="Experience"
+                            class="icon"
+                            >
+                            <div>
+                                <h3>CSS</h3>
+                                <p>Basic</p>
+                            </div>
+                        </article>
+                        <article>
+                            <img src="./Assets/checkmark.png" 
+                            alt="Experience"
+                            class="icon"
+                            >
+                            <div>
+                                <h3>JavaScript</h3>
+                                <p>Basic</p>
+                            </div>
+                        </article>
+                        <article>
+                            <img src="./Assets/checkmark.png" 
+                            alt="Experience"
+                            class="icon"
+                            >
+                            <div>
+                                <h3>Data Anayltics</h3>
+                                <p>Basic</p>
+                            </div>
+                        </article>
+                        <article>
+                            <img src="./Assets/checkmark.png" 
+                            alt="Experience"
+                            class="icon"
+                            >
+                            <div>
+                                <h3>IT Support</h3>
+                                <p>Advanced</p>
+                            </div>
+                        </article>
+                        
+                    </div>
+                </div>
+                <div class="details-containers">
+                    <h2 class="Experience-sub-title">Front End Development</h2>
+                    <div class="article-container">
+                        <article>
+                            <img src="./Assets/checkmark.png" 
+                            alt="Experience"
+                            class="icon"
+                            >
+                            <div>
+                                <h3>Git</h3>
+                                <p>Intermediate</p>
+                            </div>
+                        </article>
+                        <article>
+                            <img src="./Assets/checkmark.png" 
+                            alt="Experience"
+                            class="icon"
+                            >
+                            <div>
+                                <h3>SQL</h3>
+                                <p>Intermediate</p>
+                            </div>
+                        </article>
+                        <article>
+                            <img src="./Assets/checkmark.png" 
+                            alt="Experience"
+                            class="icon"
+                            >
+                            <div>
+                                <h3>MySQL</h3>
+                                <p>Intermediate</p>
+                            </div>
+                        </article>
+                        <article>
+                            <img src="./Assets/checkmark.png" 
+                            alt="Experience"
+                            class="icon"
+                            >
+                            <div>
+                                <h3>Python</h3>
+                                <p>Intermediate</p>
+                            </div>
+                        </article> 
+                        <article>
+                            <img src="./Assets/checkmark.png" 
+                            alt="Experience"
+                            class="icon"
+                            >
+                            <div>
+                                <h3>Cybersecurity</h3>
+                                <p>Basic</p>
+                            </div>
+                        </article>              
+                    </div>
+                </div>
+            </div>
+        </div>
+    <img
+     src="./Assets/arrow.png" 
+    alt="Arrow icon" class="icon_arrow"
+    onclick="location.href='./#Projects'"
+    />
     </section>
     <script src="Script.js"></script>
 </body>
