--- a/Index.html
+++ b/Index.html
@@ -113,7 +113,7 @@
         <h1 class="title">Experience</h1>
         <div class="experience-details-container">
             <div class="about-containers">
-                <div class="details-containers">
+                <div class="details-container">
                     <h2 class="Experience-sub-title">Front End Development</h2>
                     <div class="article-container">
                         <article>
@@ -169,7 +169,7 @@
                         
                     </div>
                 </div>
-                <div class="details-containers">
+                <div class="details-container">
                     <h2 class="Experience-sub-title">Front End Development</h2>
                     <div class="article-container">
                         <article>
@@ -232,6 +232,70 @@
     onclick="location.href='./#Projects'"
     />
     </section>
+    <section id="Projects">
+        <p1 class="section_text_p1">Browse My Recent</p1>
+        <h1 class="title">Projects</h1>
+        <div class="experience-details-container">
+            <div class="about-containers">
+                <div class="details-container color-container">
+                    <div class="article-container">
+                        <img 
+                        src="./Assets/project-1.png"
+                        alt="Project 1 "
+                        class="project-img"
+                        />
+                    </div>
+                    <div>
+                        <h2 class="experience-sub-title-project-title">Project One</h2>
+                        <div class="button-container">
+                            <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/'">Github</button>
+                        </div>
+                    </div>
+            </div>
+           
+            </div>
+        </div>
+        <img
+        src="./Assets/arrow.png" 
+       alt="Arrow icon" class="icon_arrow"
+       onclick="location.href='./#Projects'"
+       />
+    </section>
+    <section id="Contact">
+        <p class="section_text_p1">Get in Touch</p>
+        <h1 class="title">Contact Me</h1>
+        <div class="contact-info-upper-container">
+            <div class="contact-info-container">
+                <img 
+                src="./Assets/email.png" 
+                alt="Email icon"
+                class="icon contact-icon"
+                />
+                <p><a href="mailto:risimac@outlook.com">risimac@outlook.com</a></p>
+            </div>
+            <div class="contact-info-container">
+                <img 
+                src="./Assets/linkedin.png" 
+                alt="LinkedIn icon"
+                class="icon contact-icon"
+                />
+                <p><a href="https://LinkedIn.com/">LinkedIn</a></p>
+            </div>
+        </div>
+    </section>
+    <footer>
+        <nav>
+            <div clas="=nav-links-container">
+                <ul class="nav-links">
+                    <li><a href="#About">About</a></li>
+                    <li><a href="#Experience">Experience</a></li>
+                    <li><a href="#Projects">Projects</a></li>
+                    <li><a href="#Contact">Contact</a></li>
+                </ul>
+            </div>
+        </nav>
+        <p>Copyright &#169; 2025 Chriswell Maluleke</p>
+    </footer>
     <script src="Script.js"></script>
 </body>
 </html>
