--- a/Index.html
+++ b/Index.html
@@ -44,7 +44,7 @@
         <div class="section_text">
             <p class="section_text_p1">Hello,I'm</p>
             <h1 class="title">Chriswell Maluleke</h1>
-            <p class="section_text_p2">Front End Developer</p>
+            <p class="section_text_p2">Aspiring Software Engineer and Cybersecurity Engineer</p>
             <div class="btn-container">
                 <button 
                 class="btn btn-color-2" onclick="window.open('./assets/resume-example.pdf')"
@@ -87,8 +87,8 @@
                         alt="Experience icon" 
                         class="icon"
                         />
-                        <h3>Experience</h3>
-                        <p>2+ Years <br/> Front End Development</p>
+                        <h3>Interests</h3>
+                        <p>Passionate about Problem solving, technology and leadership.<br/> I enjoy creating new things and an avid fan of Formula 1, Forza Ferrari!.<br></p>
                     </div>
                     <div class="details-container">
                         <img
@@ -97,140 +97,16 @@
                         class="icon"
                         />
                         <h3>Education</h3>
-                        <p>Power Learn Academy Scholarship, Google Data Analytics Certificate, Google Cyber Security Certificate, Google IT Support Certificate <br/> Software Development, HTML,Java, CSS,Database Management, Startup for Entrepreneurs</p>
+                        <p>Pursuing a Bachelor of Science Degree in Civil Engineeri, whilst attending the Power Learn Academy.</p>
                     </div>
                 </div>
                 <div class="text-container">
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Unde maxime nisi similique quaerat reiciendis esse voluptates quod sit eum atque accusantium facilis quae cupiditate delectus optio, odit quis dolorem? Veritatis?</p>
+                    <p>Hi i'm Chris, a young South African whose willing to venture more into the technology space. Since my adolescene i have been exposed to technology but hvae never received the opportunity to dive deeper and see the world from the creator's side.<br> Through the Power Learn Project i have gained the tools to build website, understand the styling and how the functionality is encoded. I've got to understand the front-end and back-end functionalities and how they affect our everyday lives.<br> Truly it is still an understatement to say this scholarship hasn't impacted me positively.<br>I'm more curious than ever to learn more, gain more knwoledge and eventually work in tech, all thanks to Power Learn i have my foot at the door.</p>
                 </div>
             </div>
         </div>
         <img src="./Assets/arrow.png" alt="Arrow icon" class="icon_arrow"
         onclick="location.href='./#Experience'"/>
-    </section>
-    <section id="Experience">
-        <p class="section_text_p1">Explore My</p>
-        <h1 class="title">Experience</h1>
-        <div class="experience-details-container">
-            <div class="about-containers">
-                <div class="details-container">
-                    <h2 class="Experience-sub-title">Front End Development</h2>
-                    <div class="article-container">
-                        <article>
-                            <img src="./Assets/checkmark.png" 
-                            alt="Experience"
-                            class="icon"
-                            >
-                            <div>
-                                <h3>HTML</h3>
-                                <p>Intermediate</p>
-                            </div>
-                        </article>
-                        <article>
-                            <img src="./Assets/checkmark.png" 
-                            alt="Experience"
-                            class="icon"
-                            >
-                            <div>
-                                <h3>CSS</h3>
-                                <p>Basic</p>
-                            </div>
-                        </article>
-                        <article>
-                            <img src="./Assets/checkmark.png" 
-                            alt="Experience"
-                            class="icon"
-                            >
-                            <div>
-                                <h3>JavaScript</h3>
-                                <p>Basic</p>
-                            </div>
-                        </article>
-                        <article>
-                            <img src="./Assets/checkmark.png" 
-                            alt="Experience"
-                            class="icon"
-                            >
-                            <div>
-                                <h3>Data Anayltics</h3>
-                                <p>Basic</p>
-                            </div>
-                        </article>
-                        <article>
-                            <img src="./Assets/checkmark.png" 
-                            alt="Experience"
-                            class="icon"
-                            >
-                            <div>
-                                <h3>IT Support</h3>
-                                <p>Advanced</p>
-                            </div>
-                        </article>
-                        
-                    </div>
-                </div>
-                <div class="details-container">
-                    <h2 class="Experience-sub-title">Front End Development</h2>
-                    <div class="article-container">
-                        <article>
-                            <img src="./Assets/checkmark.png" 
-                            alt="Experience"
-                            class="icon"
-                            >
-                            <div>
-                                <h3>Git</h3>
-                                <p>Intermediate</p>
-                            </div>
-                        </article>
-                        <article>
-                            <img src="./Assets/checkmark.png" 
-                            alt="Experience"
-                            class="icon"
-                            >
-                            <div>
-                                <h3>SQL</h3>
-                                <p>Intermediate</p>
-                            </div>
-                        </article>
-                        <article>
-                            <img src="./Assets/checkmark.png" 
-                            alt="Experience"
-                            class="icon"
-                            >
-                            <div>
-                                <h3>MySQL</h3>
-                                <p>Intermediate</p>
-                            </div>
-                        </article>
-                        <article>
-                            <img src="./Assets/checkmark.png" 
-                            alt="Experience"
-                            class="icon"
-                            >
-                            <div>
-                                <h3>Python</h3>
-                                <p>Intermediate</p>
-                            </div>
-                        </article> 
-                        <article>
-                            <img src="./Assets/checkmark.png" 
-                            alt="Experience"
-                            class="icon"
-                            >
-                            <div>
-                                <h3>Cybersecurity</h3>
-                                <p>Basic</p>
-                            </div>
-                        </article>              
-                    </div>
-                </div>
-            </div>
-        </div>
-    <img
-     src="./Assets/arrow.png" 
-    alt="Arrow icon" class="icon_arrow"
-    onclick="location.href='./#Projects'"
-    />
     </section>
     <section id="Projects">
         <p1 class="section_text_p1">Browse My Recent</p1>
@@ -252,7 +128,23 @@
                         </div>
                     </div>
             </div>
-           
+        </div>
+        <div class="experience-details-container">
+            <div class="about-containers">
+                <div class="details-container color-container">
+                    <div class="article-container">
+                        <img 
+                        src="./Assets/project-2.png"
+                        alt="Project 2 "
+                        class="project-img"
+                        />
+                    </div>
+                    <div>
+                        <h2 class="experience-sub-title-project-title">Project Two</h2>
+                        <div class="button-container">
+                            <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/'">Github</button>
+                        </div>
+                </div>
             </div>
         </div>
         <img
