--- a/Index.html
+++ b/Index.html
@@ -39,12 +39,12 @@
     </nav>
     <section id="profile">
         <div class="section_pic-container">
-            <img src="./Assets/profile-pic.png" alt="Chriswell Maluleke Profile Picture">
+            <img src="./Assets/IMG_2148.jpg" alt="Chriswell Maluleke Profile Picture">
         </div>
         <div class="section_text">
-            <p class="section_text_p1">Hello,I'm</p>
+            <p class="section_text_p1">Hello, I'm</p>
             <h1 class="title">Chriswell Maluleke</h1>
-            <p class="section_text_p2">Aspiring Software Engineer and Cybersecurity Engineer</p>
+            <p class="section_text_p2">Aspiring Software Engineer</p>
             <div class="btn-container">
                 <button 
                 class="btn btn-color-2" onclick="window.open('./assets/resume-example.pdf')"
@@ -60,11 +60,11 @@
             <div id="socials-container">
                 <img src="./Assets/linkedin.png" alt="My LinkedIn Profile"
                 class="icon"
-                onclick="location.href='https://LinkedIn.com'"
+                onclick="location.href='https://www.linkedin.com/in/chriswell-maluleke-4815b8302/'"
                 />
                 <img src="./Assets/github.png" alt="My Github Profile"
                 class="icon"
-                onclick="location.href='https://github.com'"
+                onclick="location.href='https://github.com/Viossixth'"
                 />
             </div>
         </div>
@@ -73,12 +73,7 @@
         <p class="section_text_p1">Get To Know More</p>
         <h1 class="title">About Me</h1>
         <div class="section-container">
-            <div class="section_pic-container">
-                <img src="./Assets/about-pic.png"
-                alt="Profile Picture"
-                class="about-pic"
-                />
-            </div>
+            
             <div class="about-details-container">
                 <div class="about-containers">
                     <div class="details-container">
@@ -97,11 +92,11 @@
                         class="icon"
                         />
                         <h3>Education</h3>
-                        <p>Pursuing a Bachelor of Science Degree in Civil Engineeri, whilst attending the Power Learn Academy.</p>
+                        <p>Pursuing a Bachelor of Science Degree in Civil Engineering, whilst attending the Power Learn Academy.</p>
                     </div>
                 </div>
                 <div class="text-container">
-                    <p>Hi i'm Chris, a young South African whose willing to venture more into the technology space. Since my adolescene i have been exposed to technology but hvae never received the opportunity to dive deeper and see the world from the creator's side.<br> Through the Power Learn Project i have gained the tools to build website, understand the styling and how the functionality is encoded. I've got to understand the front-end and back-end functionalities and how they affect our everyday lives.<br> Truly it is still an understatement to say this scholarship hasn't impacted me positively.<br>I'm more curious than ever to learn more, gain more knwoledge and eventually work in tech, all thanks to Power Learn i have my foot at the door.</p>
+                    <p>Hi i'm Chris, a young South African whose willing to venture more into the technology space. Since my adolescence i have been exposed to technology but have never received the opportunity to dive deeper and see the world from the creator's side.Through the Power Learn Project i have gained the tools to build websites, understand the styling and how the functionality is encoded. I've got to understand the front-end and back-end functionalities and how they affect our everyday lives.Truly it is still an understatement to say this scholarship hasn't impacted me positively.I'm more curious than ever to learn more, gain more knowledge and eventually work in tech, all thanks to Power Learn i have my foot at the door.</p>
                 </div>
             </div>
         </div>
@@ -109,7 +104,7 @@
         onclick="location.href='./#Experience'"/>
     </section>
     <section id="Projects">
-        <p1 class="section_text_p1">Browse My Recent</p1>
+        <p class="section_text_p1">Browse My Recent</p>
         <h1 class="title">Projects</h1>
         <div class="experience-details-container">
             <div class="about-containers">
@@ -171,13 +166,13 @@
                 alt="LinkedIn icon"
                 class="icon contact-icon"
                 />
-                <p><a href="https://LinkedIn.com/">LinkedIn</a></p>
+                <p><a href="https://www.linkedin.com/in/chriswell-maluleke-4815b8302/">LinkedIn</a></p>
             </div>
         </div>
     </section>
     <footer>
         <nav>
-            <div clas="=nav-links-container">
+            <div class="=nav-links-container">
                 <ul class="nav-links">
                     <li><a href="#About">About</a></li>
                     <li><a href="#Experience">Experience</a></li>
