--- a/Index.html
+++ b/Index.html
@@ -39,7 +39,7 @@
     </nav>
     <section id="profile">
         <div class="section_pic-container">
-            <img src="./Assets/IMG_2148.jpg" alt="Chriswell Maluleke Profile Picture">
+            <img src="./Assets/Untitled design.png" alt="Chriswell Maluleke Profile Picture">
         </div>
         <div class="section_text">
             <p class="section_text_p1">Hello, I'm</p>
@@ -47,7 +47,7 @@
             <p class="section_text_p2">Aspiring Software Engineer</p>
             <div class="btn-container">
                 <button 
-                class="btn btn-color-2" onclick="window.open('./assets/resume-example.pdf')"
+                class="btn btn-color-2" onclick="window.open('./Assets/CV.pdf')"
                 >
                 Download CV
             </button>
