--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Portfolio</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="mediaqueries.css">
+    <link rel="stylesheet" href="./styles.css">
+    <link rel="stylesheet" href="./mediaqueries.css">
 </head>
 <body>
     <nav id="desktop-nav">
@@ -128,7 +128,6 @@
         
         <img src="./Assets/arrow.png" alt="Arrow icon" class="icon_arrow" onclick="location.href='./#Contact'" />
     </section>
-    
     <section id="Contact">
         <p class="section_text_p1">Get in Touch</p>
         <h1 class="title">Contact Me</h1>
@@ -164,6 +163,6 @@
         </nav>
         <p>Copyright &#169; 2025 Chriswell Maluleke</p>
     </footer>
-    <script src="Script.js"></script>
+    <script src="./Script.js"></script>
 </body>
 </html>
