--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 />
             </div>
         </div>
-    </section>
+    </section> 
     <section id="About">
         <p class="section_text_p1">Get To Know More</p>
         <h1 class="title">About Me</h1>
@@ -111,18 +111,20 @@
         <div class="experience-details-container">
             <div class="details-container color-container">
                 <div class="article-container">
-                    <img src="./Assets/project-1.png" alt="Project 1" class="project-img" />
+                    <img src="./Assets/Hope.png" alt="Project 1" class="project-img" />
                 </div>
-                <h2 class="experience-sub-title-project-title">Project One</h2>
-                <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/'">GitHub</button>
+                <p>Your career companion.</p>
+                <h2 class="experience-sub-title-project-title">Hope, A lifetime a click away</h2>
+                <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/Viossixth/Job-Tracker.git'">GitHub</button>
             </div>
     
             <div class="details-container color-container">
                 <div class="article-container">
-                    <img src="./Assets/project-2.png" alt="Project 2" class="project-img" />
+                    <img src="./Assets/Avery blue.png" alt="Project 2" class="project-img" />
                 </div>
-                <h2 class="experience-sub-title-project-title">Project Two</h2>
-                <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/'">GitHub</button>
+                <p>A Food waste Redistribution Platform meant to reduce hunger and food waste.</p>
+                <h2 class="experience-sub-title-project-title">Avery, A taste of life</h2>
+                <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/Viossixth/Food-Waste-Redistribution-Platform.git'">GitHub</button>
             </div>
         </div>
         
@@ -152,7 +154,7 @@
     </section>
     <footer>
         <nav>
-            <div class="=nav-links-container">
+            <div class="nav-links-container">
                 <ul class="nav-links">
                     <li><a href="#About">About</a></li>
                     <li><a href="#Experience">Experience</a></li>
