--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                         class="icon"
                         />
                         <h3>Interests</h3>
-                        <p>Passionate about Problem solving, technology and leadership.<br/> I enjoy creating new things and an avid fan of Formula 1, Forza Ferrari!.<br></p>
+                        <p>Passionate about Technology,Engineering and Motorsport. I enjoy an active lifestyle and i'm always on my feet.</p>
                     </div>
                     <div class="details-container">
                         <img
