--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                 <div class="article-container">
                     <img src="./Assets/Avery blue.png" alt="Project 2" class="project-img" />
                 </div>
-                <p>A Food waste Redistribution Platform meant to reduce hunger and food waste.</p>
+                <p>A Food waste Redistribution Platform.</p>
                 <h2 class="experience-sub-title-project-title">Avery, A taste of life</h2>
                 <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/Viossixth/Food-Waste-Redistribution-Platform.git'">GitHub</button>
             </div>
